added clue images on card matches & closed stamp on game completion

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/gameObjects.js"></script>
+    <script src="js/cases.js"></script>
 
 </head>
 <body class="container-fluid">
@@ -71,52 +72,12 @@
             <h4 class="subtitle">
                 Accuracy: <span id="clueAccuracy">&nbsp;</span>
             </h4>
-            <div class="shoePrint eleven horizonLine" id="c1to2"></div>
-            <div class="shoePrint eleven forwardSlash" id="c2to3"></div>
-            <div class="shoePrint eleven forwardSlash" id="c3to4"></div>
-            <div class="shoePrint eleven horizonLine" id="c4to5"></div>
-            <div class="shoePrint eleven forwardSlash" id="c5to6"></div>
-            <div class="shoePrint eleven forwardSlash" id="c6to7"></div>
-            <div class="shoePrint eleven horizonLine" id="c7to8"></div>
-            <div class="shoePrint eleven forwardSlash" id="c8to9"></div>
-            <div class="shoePrint eleven forwardSlash" id="c9to10"></div>
-            <div class="shoePrint eleven horizonLine" id="c10to11"></div>
-
-            <div class="clue" id="c1of11">
-                <img src="images/clues/pink/clue1.1.png" class="clueImage">
-            </div>
-            <div class="clue" id="c2of11">
-                <img src="images/clues/pink/clue1.2.png" class="clueImage">
-            </div>
-            <div class="clue" id="c3of11">
-                <img src="images/clues/pink/clue1.3.png" class="clueImage">
-            </div>
-            <div class="clue" id="c4of11">
-                <img src="images/clues/pink/clue1.4.png" class="clueImage">
-            </div>
-            <div class="clue" id="c5of11">
-                <img src="images/clues/pink/clue1.5.png" class="clueImage">
-            </div>
-            <div class="clue" id="c6of11">
-                <img src="images/clues/pink/clue1.1.png" class="clueImage">
-            </div>
-            <div class="clue" id="c7of11">
-                <img src="images/clues/pink/clue1.2.png" class="clueImage">
-            </div>
-            <div class="clue" id="c8of11">
-                <img src="images/clues/pink/clue1.3.png" class="clueImage">
-            </div>
-            <div class="clue" id="c9of11">
-                <img src="images/clues/pink/clue1.4.png" class="clueImage">
-            </div>
-            <div class="clue" id="c10of11">
-                <img src="images/clues/pink/clue1.1.png" class="clueImage">
-            </div>
+            <!--<div class="shoePrint eleven" id="shoe1to2"></div>
             <div class="clue" id="c11of11">
                 <img src="images/clues/pink/clue1.2.png" class="clueImage">
             </div>
-            <div class="solution solved eleven">
-            </div>
+            <div class="solution eleven">
+            </div>-->
         </div>
         <div id="gameArea"></div>
     </div>
