updated clue styling

--- a/index.html
+++ b/index.html
@@ -62,22 +62,18 @@
 
     </div>
     <div class="background row">
-        <div id="clueArea">
+        <div class="sideBar">
+            <h4 class="subtitle">
+                Accuracy: <span id="clueAccuracy">&nbsp;</span>
+            </h4>
             <h4 class="subtitle">
                 Clues Found:
                 <span id="cluesFound">&nbsp;</span>
                 /
                 <span id="cluesRemain">&nbsp;</span>
             </h4>
-            <h4 class="subtitle">
-                Accuracy: <span id="clueAccuracy">&nbsp;</span>
-            </h4>
-            <!--<div class="shoePrint eleven" id="shoe1to2"></div>
-            <div class="clue" id="c11of11">
-                <img src="images/clues/pink/clue1.2.png" class="clueImage">
-            </div>
-            <div class="solution eleven">
-            </div>-->
+            <hr>
+            <div id="clueArea"></div>
         </div>
         <div id="gameArea"></div>
     </div>
