--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/clues.css">
     <link rel="stylesheet" href="style/cards.css">
+    <link rel="stylesheet" href="style/caseSelector.css">
 
     <!-- Script Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -20,6 +21,65 @@
 
 </head>
 <body class="container-fluid">
+    <div id="caseSelector">
+        <h3 class="subtitle">Open New Case:</h3>
+        <div id="openCases">
+            <div id="pink" class="case">
+                <img src="images/caseFiles/pinkFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>5</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">A Study in Pink</h6>
+            </div>
+            <div id="banker" class="case">
+                <img src="images/caseFiles/bankerFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>9</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">The Blind Banker</h6>
+            </div>
+            <div id="greatGame" class="case">
+                <img src="images/caseFiles/greatGameFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>11</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">The Great Game</h6>
+            </div>
+            <div id="belgravia" class="case">
+                <img src="images/caseFiles/belgraviaFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>9</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">A Scandal in Belgravia</h6>
+            </div>
+            <div id="hounds" class="case">
+                <img src="images/caseFiles/houndsFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>7</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">The Hounds of Baskerville</h6>
+            </div>
+
+            <div id="reichenbach" class="case">
+                <img src="images/caseFiles/reinchbachFile.png" class="caseFile">
+                <div class="caseClues">
+                    <p>11</p>
+                    <p>Clues to Uncover</p>
+                </div>
+                <h6 class="caseTitle">The Reichenbach Fall</h6>
+            </div>
+        </div>
+        <hr>
+        <h3 class="subtitle">Re-Investigate Closed Case:</h3>
+        <div id="closedCases">
+
+        </div>
+    </div>
     <div class="navigation navbar-inverse">
         <div>
             <div id="caseStats">
@@ -40,23 +100,17 @@
             <div class="subtitle">
                 Case Files
             </div>
-            <div class="file">
-                A Study in Pink
+            <div class="file" id="currentCase">
+                &nbsp;
             </div>
-            <div class="file">
-                The Blind Banker
+            <div class="file" id="resetCase">
+                Restart Case
             </div>
-            <div class="file">
-                The Great Game
+            <div class="file" id="newCase">
+                Open New Case
             </div>
-            <div class="file">
-                A Scandal in Belgravia
-            </div>
-            <div class="file">
-                The Hounds of Baskerville
-            </div>
-            <div class="file">
-                The Reichenbach Fall
+            <div class="file" id="aboutGame">
+                About Game
             </div>
         </div>
 
