--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/clues.css">
     <link rel="stylesheet" href="style/cards.css">
     <link rel="stylesheet" href="style/caseSelector.css">
+    <link rel="stylesheet" href="style/winScreen.css">
 
     <!-- Script Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -21,7 +22,7 @@
 
 </head>
 <body class="container-fluid">
-    <div id="caseSelector">
+    <div id="caseSelector" class="open">
         <h3 class="subtitle">Open New Case:</h3>
         <div id="openCases">
             <div id="pink" class="case">
@@ -103,10 +104,10 @@
             <div class="file" id="currentCase">
                 &nbsp;
             </div>
-            <div class="file" id="resetCase">
+            <div class="file resetCase">
                 Restart Case
             </div>
-            <div class="file" id="newCase">
+            <div class="file newCase">
                 Open New Case
             </div>
             <div class="file" id="aboutGame">
@@ -130,6 +131,25 @@
             <div id="clueArea"></div>
         </div>
         <div id="gameArea"></div>
+    </div>
+    <div id="winWindow" class="closed" style="visibility: hidden">
+        <div class="winContainer">
+            <h2 id="winTitle"></h2>
+            <div class="closedCase">
+                <img src="images/caseClosedStamp.png" class="closedStamp">
+                <img src="" class="caseFile">
+            </div>
+            <div>
+                <button type="button" class="btn btn-default newCase">
+                    Open New Case
+                </button>
+                <button type="button" class="btn btn-default resetCase">
+                    Re-investigate
+                    <br>
+                    <span class="caseTitle"></span>
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 
