updated clue pictures for belgravia

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <div class="letterSquare">O</div>
                 <div class="letterSquare">C</div>
                 <div class="letterSquare">K</div>
+                <!--<h2 style="color: #ffffff; margin: 0;">SHERLOCK &nbsp; DEDUCES</h2>-->
             </div>
         </div>
         <div id="gameOptions">
