updated clue pictures for banker

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="images/caseFiles/pinkFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>5</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">A Study in Pink</h6>
             </div>
@@ -37,7 +37,7 @@
                 <img src="images/caseFiles/bankerFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>9</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">The Blind Banker</h6>
             </div>
@@ -45,7 +45,7 @@
                 <img src="images/caseFiles/greatGameFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>11</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">The Great Game</h6>
             </div>
@@ -53,7 +53,7 @@
                 <img src="images/caseFiles/belgraviaFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>9</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">A Scandal in Belgravia</h6>
             </div>
@@ -61,7 +61,7 @@
                 <img src="images/caseFiles/houndsFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>7</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">The Hounds of Baskerville</h6>
             </div>
@@ -69,7 +69,7 @@
                 <img src="images/caseFiles/reinchbachFile.png" class="caseFile">
                 <div class="caseClues">
                     <p>11</p>
-                    <p>Clues to Uncover</p>
+                    <p>Clues to Find</p>
                 </div>
                 <h6 class="caseTitle">The Reichenbach Fall</h6>
             </div>
