--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- Script Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <!--<script src="js/script.js"></script>
     <script src="js/gameObjects.js"></script>
-    <script src="js/cases.js"></script>
+    <script src="js/cases.js"></script>-->
 
 </head>
 <body class="container-fluid">
@@ -160,6 +160,10 @@
             </div>
         </div>
     </div>
+    <!-- Script Files -->
+    <script src="js/script.js"></script>
+    <script src="js/gameObjects.js"></script>
+    <script src="js/cases.js"></script>
 </body>
 
 </html>
